﻿Version 2.9.7
MVC 6
- All NuGet packages updated.
- Dropped TagHelpers NuGet package dependency on the base NuGet package.
- Refactored AtomActionResult to use IHostingEnvironment. 
- Subresource Integrity tag helper added to TagHelpers NuGet package and _Layout.cshtml.

Version 2.9.6
MVC 5
- Removed AntiXss package as it was causing a warning dialogue box to show up. It was not used and people can add it 
themselves if they need it.
MVC 6
- Automatically run Mocha JavaScript tests using gulp-mocha-phantomjs.
- Added gulp-mocha-phantomjs to package.json.
- Added a test task to gulpfile.js.
- Renamed Test folder to Tests.

Version 2.9.5
MVC 5 & 6
- Updated Newtonsoft.Json to 8.0.2.
- Updated jQuery to 2.2.0.
- Updated Bootstrap 3.3.6.
MVC 5
- Switched from Twitter.Bootstrap.Less NuGet package to Bootstrap.Less.
MVC 6
- Use an absolute expiration instead of a sliding one for the sitemap, just in case people are dynamically generating 
the sitemap.
- Updated Font Awesome to 4.5.0.
- Updated JavaScript Mocha, Chai and Sinon.
- Updated Gulp packages.
- Switched from deprecated gulp-minify-css to gulp-cssnano.
- Changed gulpfile.js to add a lintSources variable with defaults to skip the application-insights.js file.
- Add the new ASPNET_ENVIRONMENT variable in gulpfile.js. Leave the old ASPNET_ENV until RC2 upgrade.

Version 2.9.4
MVC 6
- Fix issue where removing application insights caused a compile error in Startup.ContentSecurityPolicy.cs.

Version 2.9.3
MVC 6
- Added new feature selection icons.
- Updated the MVC 6 Technology Map image.
- Updated the ReadMe to uncomment the Glimpse TODO and make the social TODO's conditional.

Version 2.9.2
MVC 5 & 6
- Added NoLowercaseQueryStringAttribute filter to allow URL's containing query strings with upper-case characters when 
using the RedirectToCanonicalUrlAttribute. Added a note to use this attribute in the AccountController when using 
ASP.NET Identity.