@@ -3,6 +3,8 @@ MVC 6
 - All NuGet packages updated.
 - Dropped TagHelpers NuGet package dependency on the base NuGet package.
 - Refactored AtomActionResult to use IHostingEnvironment. 
+- Added RemoveServerHttpHeader extension method for IApplicationBuilder to the main NuGet package.
+- Used the RemoveServerHttpHeader method in the Configure method in Startup.cs.
 - Subresource Integrity tag helper added to TagHelpers NuGet package and _Layout.cshtml.
 
 Version 2.9.6
